--- a/ptr/yurts.html
+++ b/ptr/yurts.html
@@ -85,7 +85,7 @@
 
                             <!-- footer section. -->
                             <footer>Copyright &copy 2018 Pacific Trails Resort</footer>
-                            <footer><u><a href="mailto:diana@mascarenhas.com"><em>diana@mascarenhas.com</em></a></u></footer>
+                            <footer><u><a href="mailto:nev@mascarenhas.com"><em>nev@mascarenhas.com</em></a></u></footer>
   
                 </div>
             </div>
