--- a/ptr/activities.html
+++ b/ptr/activities.html
@@ -47,7 +47,7 @@
                                 <!-- footer section. -->
                                 <div class="container">
                                 <footer>Copyright &copy 2018 Pacific Trails Resort</footer>
-                                <footer><u><a href="mailto:diana@mascarenhas.com"><em>diana@mascarenhas.com</em></a></u></footer>
+                                <footer><u><a href="mailto:ascarenhas.com"><em>mascarenhas.com</em></a></u></footer>
                             </div>
       
                     </div>
